--- a/_sass/_phil-theme.scss
+++ b/_sass/_phil-theme.scss
@@ -105,6 +105,7 @@ table {
 
 .captioned-img {
   width: 400px;
+  max-width: 60%;
   float: left;
   margin: 0.3rem 1rem 1rem 0rem;
 
